--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,13 @@ MarkupSafe==2.1.3
 # For development/testing (optional)
 # python-dotenv==1.0.0  # Uncomment to use .env files for configuration
 
+# Google Gemini AI for recipe extraction
+google-genai==1.10.0
+
+# For fetching web pages
+requests==2.31.0
+beautifulsoup4==4.12.3
+
+# For PDF parsing
+PyPDF2==3.0.1
+
