Implement complete MySQL multi-user backend
Database Foundation:
- Add complete 14-table MySQL schema with normalized ingredients
- Create SQLAlchemy ORM models for all tables
- Add database configuration and connection management
- Implement triggers for auto-updating statistics
- Include 30+ common ingredients as initial data
- Add database views for complex queries

Application Layer:
- Create MySQLStorage class with complete CRUD operations
- Implement user authentication with Flask-Login and bcrypt
- Add multi-user Flask app (app_mysql.py) with permission checks
- Create ingredient autocomplete API endpoint
- Add recipe search by ingredient functionality
- Implement favorites and collections systems

User Features:
- User registration and login
- User profiles with statistics
- Public/private/unlisted recipe visibility
- My Recipes dashboard
- Favorites list
- Email sharing tracking (existing feature enhanced)

Scripts & Tools:
- init_database.py - Initialize MySQL schema
- create_user.py - Create user accounts
- migrate_json_to_mysql.py - Migrate JSON to MySQL

Templates:
- Login and registration pages
- User profile page
- My Recipes page
- Favorites list page
- Auth-enabled navigation (base_mysql.html)

Documentation:
- MYSQL_MIGRATION.md - Complete setup guide
- MYSQL_COMPLETE.md - Usage documentation
- IMPLEMENTATION_SUMMARY.md - Technical summary
- Update README with MySQL information

Features:
- Normalized ingredient catalog with autocomplete
- Search recipes by ingredient (exact match, fast)
- User authentication and authorization
- Recipe ownership and permissions
- Public recipe browsing
- User statistics dashboard
- Meal planning database (UI pending)
- Collections/cookbooks database (UI pending)
- Scalable to 100,000+ recipes
- Production-ready architecture

Both JSON and MySQL backends coexist - original app.py still works!

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,14 @@ beautifulsoup4==4.12.3
 # For PDF parsing
 PyPDF2==3.0.1
 
+# MySQL Database
+mysql-connector-python==8.2.0
+SQLAlchemy==2.0.23
+
+# Password hashing
+bcrypt==4.1.1
+
+# Flask extensions for auth and sessions
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+
