--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,10 @@ click==8.1.7
 MarkupSafe==2.1.3
 
 # For development/testing (optional)
-# python-dotenv==1.0.0  # Uncomment to use .env files for configuration
+python-dotenv==1.0.0  # Uncomment to use .env files for configuration
 
 # Google Gemini AI for recipe extraction
-google-genai==1.10.0
+google-generativeai==0.8.3
 
 # For fetching web pages
 requests==2.31.0
